@@ -14,6 +14,12 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+server/spell_attack.c: Fix bug #2353025 "2.0, holy wrath and ret. strike freeze
+  server". This happened because explosion spells use stats.maxhp as a unique ID
+  to avoid running out of control. This one was properly set by bullet spells,
+  but not by smite spells. Fix this.
+Arvid Norlander 2009-02-04
+
 server/spell_util.c: Put cap on level used for cast_magic_storm() in
     prayer_failure() - otherwise, spell can hang the server as it
     gets cast at super high level.
